5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4182/executions/1667_2319.log
== TEST (2019-04-16 16:11:03) 
-- CODE:
nome_do_bruxo=float(input())
if (nome_do_bruxo==HERMIONE)
	m= 2.9994
	s= 8.789
	total= m/s
else (nome_do_bruxo==RONY)
	m= 1.674
	s= 10.789
	total= m/s
print(nome_do_bruxo.lower())
-- ERROR:
File "XXXX", line 2
    if (nome_do_bruxo==HERMIONE)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:12:18) 
-- CODE:
nome_do_bruxo=float(input())
if (nome_do_bruxo==HERMIONE)
	total= 2.9994/8.789
else (nome_do_bruxo==RONY)
	total= 1.674/10.789
print(nome_do_bruxo.lower())
-- ERROR:
File "XXXX", line 2
    if (nome_do_bruxo==HERMIONE)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:15:08) 
-- CODE:
nome_do_bruxo= float(input())
if (nome_do_bruxo==HERMIONE)
	v= 2.9994/8.789
else (nome_do_bruxo==RONY)
	v= 1.674/10.789
print(nome_do_bruxo.lower(), v)
-- ERROR:
File "XXXX", line 2
    if (nome_do_bruxo==HERMIONE)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:16:43) 
-- CODE:
nome= float(input())
if (nome == HERMIONE)
	v= 2.9994/8.789
else (nome == RONY)
	v= 1.674/10.789
print(nome_do_bruxo.lower())
-- ERROR:
File "XXXX", line 2
    if (nome == HERMIONE)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:16:45) 
-- CODE:
nome= float(input())
if (nome == HERMIONE)
	v= 2.9994/8.789
else (nome == RONY)
	v= 1.674/10.789
print(nome_do_bruxo.lower())
-- ERROR:
File "XXXX", line 2
    if (nome == HERMIONE)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:16:45) 
-- CODE:
nome= float(input())
if (nome == HERMIONE)
	v= 2.9994/8.789
else (nome == RONY)
	v= 1.674/10.789
print(nome_do_bruxo.lower())
-- EXECUTION TIME:
0.134433
-- ERROR:
  File "/home/codebench/codes/1667/2319/main.py", line 2
    if (nome == HERMIONE)
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:16:46) 
-- CODE:
nome= float(input())
if (nome == HERMIONE)
	v= 2.9994/8.789
else (nome == RONY)
	v= 1.674/10.789
print(nome_do_bruxo.lower())
-- EXECUTION TIME:
0.118557
-- ERROR:
  File "/home/codebench/codes/1667/2319/main.py", line 2
    if (nome == HERMIONE)
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:16:46) 
-- CODE:
nome= float(input())
if (nome == HERMIONE)
	v= 2.9994/8.789
else (nome == RONY)
	v= 1.674/10.789
print(nome_do_bruxo.lower())
-- ERROR:
File "XXXX", line 2
    if (nome == HERMIONE)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:19:15) 
-- CODE:
nome= float(input())
if (nome == "HERMIONE")
	v= 2.9994/8.789
else (nome == "RONY")
	v= 1.674/10.789
print(nome.lower())
-- ERROR:
File "XXXX", line 2
    if (nome == "HERMIONE")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:19:38) 
-- CODE:
nome= float(input())
if (nome == "HERMIONE")
	v= 2.9994/8.789
else (nome == "RONY")
	v= 1.674/10.789
print(v.lower())
-- ERROR:
File "XXXX", line 2
    if (nome == "HERMIONE")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:19:39) 
-- CODE:
nome= float(input())
if (nome == "HERMIONE")
	v= 2.9994/8.789
else (nome == "RONY")
	v= 1.674/10.789
print(v.lower())
-- ERROR:
File "XXXX", line 2
    if (nome == "HERMIONE")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:19:40) 
-- CODE:
nome= float(input())
if (nome == "HERMIONE")
	v= 2.9994/8.789
else (nome == "RONY")
	v= 1.674/10.789
print(v.lower())
-- ERROR:
File "XXXX", line 2
    if (nome == "HERMIONE")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:19:40) 
-- CODE:
nome= float(input())
if (nome == "HERMIONE")
	v= 2.9994/8.789
else (nome == "RONY")
	v= 1.674/10.789
print(v.lower())
-- ERROR:
File "XXXX", line 2
    if (nome == "HERMIONE")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:19:40) 
-- CODE:
nome= float(input())
if (nome == "HERMIONE")
	v= 2.9994/8.789
else (nome == "RONY")
	v= 1.674/10.789
print(v.lower())
-- ERROR:
File "XXXX", line 2
    if (nome == "HERMIONE")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:19:41) 
-- CODE:
nome= float(input())
if (nome == "HERMIONE")
	v= 2.9994/8.789
else (nome == "RONY")
	v= 1.674/10.789
print(v.lower())
-- ERROR:
File "XXXX", line 2
    if (nome == "HERMIONE")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:19:41) 
-- CODE:
nome= float(input())
if (nome == "HERMIONE")
	v= 2.9994/8.789
else (nome == "RONY")
	v= 1.674/10.789
print(v.lower())
-- ERROR:
File "XXXX", line 2
    if (nome == "HERMIONE")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:19:42) 
-- CODE:
nome= float(input())
if (nome == "HERMIONE")
	v= 2.9994/8.789
else (nome == "RONY")
	v= 1.674/10.789
print(v.lower())
-- ERROR:
File "XXXX", line 2
    if (nome == "HERMIONE")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:19:59) 
-- CODE:
nome= float(input())
if (nome = "HERMIONE")
	v= 2.9994/8.789
else (nome = "RONY")
	v= 1.674/10.789
print(v.lower())
-- ERROR:
File "XXXX", line 2
    if (nome = "HERMIONE")
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:20:34) 
-- CODE:
nome= input()
if (nome = "HERMIONE")
	v= 2.9994/8.789
else (nome = "RONY")
	v= 1.674/10.789
print(v.lower())
-- ERROR:
File "XXXX", line 2
    if (nome = "HERMIONE")
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:22:33) 
-- CODE:
nome= float(input())
if (nome = "HERMIONE"):
	v= 2.9994/8.789
else (nome = "RONY"):
	v= 1.674/10.789
print(nome.lower())
-- ERROR:
File "XXXX", line 2
    if (nome = "HERMIONE"):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:22:53) 
-- CODE:
nome= float(input())
if (nome = "hermione"):
	v= 2.9994/8.789
else (nome = "RONY"):
	v= 1.674/10.789
print(nome.lower())
-- ERROR:
File "XXXX", line 2
    if (nome = "hermione"):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:23:23) 
-- CODE:
nome= float(input())
if (nome = "hermione"):
	v= 2.9994/8.789
else (nome = "rony"):
	v= 1.674/10.789
print(nome.lower())
-- ERROR:
File "XXXX", line 2
    if (nome = "hermione"):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:24:37) 
-- CODE:
nome= float(input())
if (nome == "hermione"):
	print(2.9994/8.789)
else:
	print(1.674/10.789)
print(nome.lower())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome= float(input())
ValueError: could not convert string to float: 'Hermione'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:24:39) 
-- CODE:
nome= float(input())
if (nome == "hermione"):
	print(2.9994/8.789)
else:
	print(1.674/10.789)
print(nome.lower())
-- EXECUTION TIME:
0.123021
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2319/main.py", line 1, in <module>
    nome= float(input())
ValueError: could not convert string to float: 'Hermione'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:24:41) 
-- CODE:
nome= float(input())
if (nome == "hermione"):
	print(2.9994/8.789)
else:
	print(1.674/10.789)
print(nome.lower())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome= float(input())
ValueError: could not convert string to float: 'Hermione'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:25:21) 
-- CODE:
nome= float(input(.upper()))
if (nome == "hermione"):
	print(2.9994/8.789)
else:
	print(1.674/10.789)
print(nome.lower())
-- ERROR:
File "XXXX", line 1
    nome= float(input(.upper()))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:25:38) 
-- CODE:
nome= float(input())
if (nome == "hermione"):
	print(2.9994/8.789)
else:
	print(1.674/10.789)
print(nome.lower())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome= float(input())
ValueError: could not convert string to float: 'Hermione'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:26:08) 
-- CODE:
nome= input()
if (nome == "hermione"):
	print(2.9994/8.789)
else:
	print(1.674/10.789)
print(nome.lower())
-- OUTPUT:
0.15515803132820466
hermione
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:26:34) 
-- CODE:
nome= input()
if (nome == "hermione"):
	print(2.9994/8.789)
else:
	print(1.674/10.789)

-- OUTPUT:
0.15515803132820466
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:26:37) 
-- CODE:
nome= input()
if (nome == "hermione"):
	print(2.9994/8.789)
else:
	print(1.674/10.789)

-- EXECUTION TIME:
0.171925
-- TEST CASE 1:
---- input:
Hermione
---- correct output:
0.3412674934577313
---- user output:
0.15515803132820466
-- TEST CASE 2:
---- input:
Rony
---- correct output:
0.15515803132820466
---- user output:
0.15515803132820466
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:26:38) 
-- CODE:
nome= input()
if (nome == "hermione"):
	print(2.9994/8.789)
else:
	print(1.674/10.789)

-- OUTPUT:
0.15515803132820466
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:27:09) 
-- CODE:
nome= input()
if (nome == "hermione"):
	print(2.9994/8.789)
else:
	print(1.674/10.789)

-- EXECUTION TIME:
0.195199
-- TEST CASE 1:
---- input:
Hermione
---- correct output:
0.3412674934577313
---- user output:
0.15515803132820466
-- TEST CASE 2:
---- input:
Rony
---- correct output:
0.15515803132820466
---- user output:
0.15515803132820466
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:28:58) 
-- CODE:
nome= input()
if (nome == "hermione"):
	v=2.9994/8.789
else:
	print(1.674/10.789)

-- OUTPUT:
0.15515803132820466
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:29:08) 
-- CODE:
nome= input()
if (nome == "HERMIONE"):
	v=2.9994/8.789
else:
	print(1.674/10.789)

-- OUTPUT:
0.15515803132820466
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:29:44) 
-- CODE:
nome= input()
if (nome == "HERMIONE"):
	v=2.9994/8.789
else:
	v=1.674/10.789

-- OUTPUT:
0.15515803132820466
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:30:09) 
-- CODE:
nome= float(input())
if (nome == "HERMIONE"):
	v=2.9994/8.789
else:
	v=1.674/10.789

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome= float(input())
ValueError: could not convert string to float: 'Hermione'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:30:12) 
-- CODE:
nome= float(input())
if (nome == "HERMIONE"):
	v=2.9994/8.789
else:
	v=1.674/10.789

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome= float(input())
ValueError: could not convert string to float: 'Hermione'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:30:54) 
-- CODE:
nome= float(input())
if (nome == "HERMIONE"):
	v=2.9994/8.789
else:
	v=1.674/10.789
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome= float(input())
ValueError: could not convert string to float: 'Hermione'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:48:21) 
-- CODE:
nome= input() 
if (nome == "HERMIONE"):
	v=2.9994/8.789
else:
	v=1.674/10.789
print(v)
-- OUTPUT:
0.15515803132820466
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:48:30) 
-- CODE:
nome= input() 
if (nome == "HERMIONE"):
	v=2.9994/8.789
else:
	v=1.674/10.789
print(v)
-- EXECUTION TIME:
0.18003
-- TEST CASE 1:
---- input:
Hermione
---- correct output:
0.3412674934577313
---- user output:
0.15515803132820466
-- TEST CASE 2:
---- input:
Rony
---- correct output:
0.15515803132820466
---- user output:
0.15515803132820466
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:48:49) 
-- CODE:
nome= input() 
if (nome == "HERMIONE"):
	v=2.9994/8.789
else:
	v=1.674/10.789
print(nome.lower())
-- OUTPUT:
hermione
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:48:51) 
-- CODE:
nome= input() 
if (nome == "HERMIONE"):
	v=2.9994/8.789
else:
	v=1.674/10.789
print(nome.lower())
-- EXECUTION TIME:
0.130084
-- TEST CASE 1:
---- input:
Hermione
---- correct output:
0.3412674934577313
---- user output:
hermione
-- TEST CASE 2:
---- input:
Rony
---- correct output:
0.15515803132820466
---- user output:
rony
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:49:39) 
-- CODE:
nome= input() 
if (nome == "Hermione"):
	v=2.9994/8.789
else:
	v=1.674/10.789
print(nome.lower())
-- OUTPUT:
hermione
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:49:56) 
-- CODE:
nome= input() 
if (nome == "Hermione"):
	v=2.9994/8.789
else:
	v=1.674/10.789
print(nome.lower())
-- OUTPUT:
hermione
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:50:25) 
-- CODE:
nome= input() 
if (nome == "Hermione"):
	v=2.9994/8.789
else:
	v=1.674/10.789
print(nome.lower())
-- OUTPUT:
hermione
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:50:25) 
-- CODE:
nome= input() 
if (nome == "Hermione"):
	v=2.9994/8.789
else:
	v=1.674/10.789
print(nome.lower())
-- OUTPUT:
hermione
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:50:50) 
-- CODE:
nome= input() 
if (nome == "Hermione"):
	v=2.9994/8.789
else:
	v=1.674/10.789
print(v)
-- OUTPUT:
0.3412674934577313
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:51:06) 
-- CODE:
nome= input() 
if (nome == "Hermione"):
	v=2.9994/8.789
else:
	v=1.674/10.789
print(v)
-- EXECUTION TIME:
0.129179
-- TEST CASE 1:
---- input:
Hermione
---- correct output:
0.3412674934577313
---- user output:
0.3412674934577313
-- TEST CASE 2:
---- input:
Rony
---- correct output:
0.15515803132820466
---- user output:
0.15515803132820466
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
